--- a/hue/index.html
+++ b/hue/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../pccs.css">
+
   <style media="screen">
   @media ( max-width: 459px ) {
     .s1, .l1 {
@@ -42,20 +43,15 @@
     }
   }
   </style>
-  <title>16x16 Square | PCCS Palette</title>
+  <title>PCCS Palette</title>
 </head>
 <body>
-  <script type="text/javascript">
-  if (window.innerWidth > 27*32) {
-    location.href = "../32bit";
-  }
-  </script>
   <header id="title_bar">
-    <div id="title_image">N</div>
-    <div id="title">PCCS Palette [16x16]</div>
-    <a id="developer" href="mailto:05frill_whirl@icloud.com">제작자</a>
+    <div id="title_image">DC</div>
+    <div id="title">PCCS Palette [16bit]</div>
+    <a id="developer" href="mailto:05frill_whirl@icloud.com" style="color: lightgray;">제작자</a>
   </header>
-  <main id="palette" class="palette-grid">
+  <main class="palette-grid">
     <script type="text/javascript">
     for (var l = 0; l < 16; l++) {
       for (var s = 0; s < 16; s++) {
@@ -69,7 +65,7 @@
     </script>
   </main>
   <main>
-    <div id="controler" class="" style="max-width: 30rem;margin: auto;">
+    <div id="controler" style="max-width: 30rem;margin: auto;">
       <div id="downdown" class="multi">
         <svg xmlns="http://www.w3.org/2000/svg" width="64px" height="64px" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
           <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
@@ -80,6 +76,7 @@
           <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
         </svg>
       </div>
+      <!-- <div id="title_image" style="width: 2rem;height: 2rem;font-size: 1rem;"></div> -->
       <div id="up" style="">
         <svg xmlns="http://www.w3.org/2000/svg" width="48px" height="48px" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -108,6 +105,7 @@
     <a href="https://gall.dcinside.com/p_color/99569" target="_blank">→ Reference 2</a>
   </footer>
   <script type="text/javascript">
+  // 객체 지정
   const box_title = document.getElementById('title_bar');
   const box_controler = document.getElementById('controler');
   const box_popup = document.getElementById('popup');
@@ -163,6 +161,11 @@
     document.body.removeChild(t);
     alert("복사됐습니다");
   }
+
+  function tag_(s,l,c) {
+    document.getElementById(s+'_'+l).innerText = c;
+    document.getElementById('full_'+s+'_'+l).innerText = c;
+  }
   switch (true) {
     case (hue < 55):
     title_image.innerText = "W";
@@ -194,38 +197,79 @@
 
   // 색상값 설정
   box_title.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
-  title_image.style.backgroundColor = "hsl(" + hue + ", 50%, 20%)";
+  title_image.style.backgroundColor = "hsl(" + hue + ", 50%, 75%)";
   title_image.style.color = "hsl(" + hue + ", 50%, 50%)";
-  document.getElementById('title').style.color = "hsl(" + hue + ", 50%, 20%)";
+  document.getElementById('title').style.color = "hsl(" + hue + ", 50%, 75%)";
+
   box_controler.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
+  title_image.style.backgroundColor = "hsl(" + hue + ", 50%, 75%)";
+  title_image.style.color = "hsl(" + hue + ", 50%, 50%)";
 
   upup.style.backgroundColor = "hsl(" + (hue + 30) + ", 66%, 66%)";
   up.style.backgroundColor = "hsl(" + (hue + 15) + ", 66%, 66%)";
   down.style.backgroundColor = "hsl(" + (hue - 15) + ", 66%, 66%)";
   downdown.style.backgroundColor = "hsl(" + (hue - 30) + ", 66%, 66%)";
 
-  for (var i = 0; i < 16; i++) {
-    for (var j = 0; j < 16; j++) {
-      var i_ = i + 1;
-      var j_ = 16 - j;
-      var i_16 = i_.toString(16);
-      var j_16 = j_.toString(16);
-      var color_gen = "hsl("+hue+","+(i_ * 6.25)+"%,"+(j_ * 6.25)+"%)";
-      var target = document.getElementById(i_16 + '_' + j_16);
-      box_popup.innerHTML += "<div id='full_"+i_16+"_"+j_16+"' onclick='close_popup(\""+i_16+"\",\""+j_16+"\")'></div>";
+  for (var s = 0; s < 16; s++) {
+    for (var l = 0; l < 16; l++) {
+      var s_ = s + 1;
+      var l_ = 16 - l;
+      var s_16 = s_.toString(16);
+      var l_16 = l_.toString(16);
+      var s_100 = s_ * 6.25;
+      var l_100 = l_ * 6.25;
+      var color_gen = "hsl("+hue+"," + s_100 + "%," + l_100 + "%)";
+      var target = document.getElementById(s_16 + '_' + l_16);
+      box_popup.innerHTML += "<div id='full_"+s_16+"_"+l_16+"' onclick='close_popup(\""+s_16+"\",\""+l_16+"\")'></div>";
       target.style.backgroundColor = color_gen;
-      var target_ = document.getElementById('full_' + i_16 + '_' + j_16);
+      var target_ = document.getElementById('full_' + s_16 + '_' + l_16);
       target_.style.backgroundColor = color_gen;
-      if (hue > 205 && hue < 290) {
-        if (j_ < 8 + 0.16*i_) {
+      if (hue > 200 && hue < 300) {
+        if (l_100 < 50 + 0.16*s_100) {
           target.style.color = "white";
           target_.style.color = "white";
         }
       } else {
-        if (j_ < 8 - 0.16*i_) {
+        if (l_100 < 50 - 0.16*s_100) {
           target.style.color = "white";
           target_.style.color = "white";
         }
+      }
+      switch (true) {
+        case (Math.pow(s_ - 5*(16/36), 2) + Math.pow(l_ - 1,2) < 1):
+        tag_(s_16,l_16,'dkg');
+        break;
+        case (Math.pow(s_ - 5*(16/36), 2) + Math.pow(l_ - 5,2) < 1):
+        tag_(s_16,l_16,'g');
+        break;
+        case (Math.pow(s_ - 5*(16/36), 2) + Math.pow(l_ - 11,2) < 1):
+        tag_(s_16,l_16,'ltg');
+        break;
+        case (Math.pow(s_ - 10*(16/36), 2) + Math.pow(1/1.5,2)*Math.pow(l_ - 14,2) < 1):
+        tag_(s_16,l_16,'p');
+        break;
+        case (Math.pow(s_ - 18*(16/36), 2) + Math.pow(1/2,2)*Math.pow(l_ - 3,2) < 1):
+        tag_(s_16,l_16,'dk');
+        break;
+        case (Math.pow(s_ - 18*(16/36), 2) + Math.pow(1/2.5,2)*Math.pow(l_ - 6.5,2) < 1):
+        tag_(s_16,l_16,'d');
+        break;
+        case (Math.pow(s_ - 18*(16/36), 2) + Math.pow(1/2.5,2)*Math.pow(l_ - 9.5,2) < 1):
+        tag_(s_16,l_16,'sf');
+        break;
+        case (Math.pow(s_ - 22*(16/36), 2) + Math.pow(1/2.5,2)*Math.pow(l_ - 11.5,2) < 1):
+        tag_(s_16,l_16,'lt');
+        break;
+        case (Math.pow(s - 30*(16/36), 2) + Math.pow(1/3,2)*Math.pow(l - 10,2) < 1):
+        tag_(s_16,l_16,'b');
+        break;
+        case (Math.pow(s - 30*(16/36), 2) + Math.pow(1/3,2)*Math.pow(l - 5,2) < 1):
+        tag_(s_16,l_16,'dp');
+        break;
+        case (Math.pow(s - 34*(16/36), 2) + Math.pow(1/4.5,2)*Math.pow(l - 8.5,2) < 1):
+        tag_(s_16,l_16,'v');
+        break;
+        default:
       }
     }
   }
@@ -242,123 +286,6 @@
   downdown.onclick = function() {
     location.search = "?hue=" + (hue - 10) + "&s_="+value_s.innerText/6.25+"&l_=" + value_l.innerText/6.25;
   }
-  function tag_(s,l,c) {
-    document.getElementById(s+'_'+l).innerText = c;
-    document.getElementById('full_'+s+'_'+l).innerText = c;
-  }
-
-  tag_('4','4','dkg');
-  tag_('5','4','dkg');
-  tag_('6','4','dkg');
-  tag_('7','4','dkg');
-  tag_('8','4','dkg');
-  tag_('b','4','dk:dkg');
-  tag_('c','4','dk:dkg');
-  tag_('e','4','dk');
-  tag_('f','4','dk');
-  tag_('10','4','dk');
-
-  tag_('4','5','g:dkg');
-  tag_('5','5','g:dkg');
-  tag_('6','5','g:dkg');
-  tag_('a','5','d');
-  tag_('b','5','d');
-  tag_('c','5','d:dk');
-  tag_('d','5','d:dk');
-  tag_('e','5','dp:dk');
-  tag_('f','5','dp:dk');
-  tag_('10','5','dp:dk');
-
-  tag_('4','6','g');
-  tag_('5','6','g');
-  tag_('6','6','g');
-  tag_('7','6','g');
-  tag_('8','6','d:g');
-  tag_('9','6','d');
-  tag_('a','6','d');
-  tag_('b','6','d');
-  tag_('c','6','d:dp');
-  tag_('d','6','dp');
-  tag_('e','6','dp');
-  tag_('f','6','dp');
-
-  tag_('4','7','g');
-  tag_('5','7','g');
-  tag_('6','7','g');
-  tag_('8','7','d:g');
-  tag_('9','7','d');
-  tag_('a','7','d');
-  tag_('d','7','s:dp');
-  tag_('e','7','s:dp');
-  tag_('10','7','v:dp');
-
-  tag_('4','8','ltg:g');
-  tag_('5','8','ltg:g');
-  tag_('8','8','sf:d');
-  tag_('9','8','sf:d');
-  tag_('a','8','sf:d');
-  tag_('b','8','sf:s:d');
-  tag_('c','8','s');
-  tag_('d','8','s');
-  tag_('e','8','s');
-  tag_('f','8','v');
-  tag_('10','8','v');
-
-  tag_('4','9','ltg:g');
-  tag_('5','9','ltg:g');
-  tag_('9','9','sf');
-  tag_('a','9','sf');
-  tag_('b','9','sf:s');
-  tag_('c','9','');
-  tag_('d','9','b:s');
-  tag_('e','9','b:s');
-  tag_('10','9','b:v');
-
-  tag_('8','a','ltg:sf');
-  tag_('9','a','sf');
-  tag_('a','a','sf');
-  tag_('b','a','sf');
-  tag_('c','a','sf:b');
-  tag_('d','a','b');
-  tag_('e','a','b');
-  tag_('f','a','b');
-
-  tag_('5','b','ltg');
-  tag_('6','b','ltg');
-  tag_('7','b','ltg');
-  tag_('9','b','ltg:sf');
-  tag_('a','b','sf');
-  tag_('b','b','sf');
-  tag_('c','b','l:sf');
-  tag_('e','b','l:b');
-  tag_('f','b','l:b');
-  tag_('10','b','l:b');
-
-  tag_('5','c','ltg');
-  tag_('6','c','ltg');
-  tag_('7','c','ltg');
-  tag_('8','c','ltg');
-  tag_('d','c','l:sf');
-  tag_('e','c','l');
-  tag_('f','c','l');
-  tag_('10','c','l');
-
-  tag_('8','d','p:lg');
-  tag_('9','d','p:lg');
-  tag_('d','d','p:l');
-  tag_('e','d','p:l');
-
-  tag_('9','e','p:lg');
-  tag_('b','e','p');
-  tag_('c','e','p');
-  tag_('d','e','p');
-  tag_('e','e','p');
-  tag_('f','e','p');
-
-  tag_('6','f','(vp)');
-  tag_('7','f','(vp)');
-  tag_('8','f','(vp)');
-  tag_('9','f','(vp)');
 
   function open_popup(x,y) {
     share_fill(Number.parseInt(x, 16)*6.25, Number.parseInt(y, 16)*6.25);
@@ -369,8 +296,8 @@
       get_popup.innerText = "hsl("+hue+", "+(Number.parseInt(x, 16)*6.25)+"%, "+(Number.parseInt(y, 16)*6.25)+"%)";
     }
   }
-  function close_popup(x,y) {
-    document.getElementById('full_'+x+'_'+y).style.display = "none";
+  function close_popup(s, l) {
+    document.getElementById('full_'+s+'_'+l).style.display = "none";
   }
 
   if (!isNaN(get_s) && !isNaN(get_l)) {
